tests/error/comptime/check_dereference10.bz
function foo(t: [int32]) -> *int32
{
	return &t[0];
}

function test()
{
	(consteval {
		*foo([ 0 ]);
	});
}
